<resources>
    <string name="app_name">The Monty Hall Problem</string>
    <string name="question_mark">\?</string>
    <string name="initial_status_text">Please select a Door, try to Win the Car!</string>
    <string name="confirm_choice_status_text">Confirm your choice..</string>
    <string name="success_status_text">Congratulations!</string>
    <string name="fail_status_text">You lose! Good day sir!</string>
    <string name="play_again_button_text">Play again</string>
    <string name="reset_stats_button_text">Reset statistics</string>
    <string name="initial_statistics_text">No statistics yet</string>
    <string name="keep_stats_heading">Choice Kept</string>
    <string name="switch_stats_heading">Choice Switched</string>
    <string name="door_1_content_description">Door 1</string>
    <string name="door_2_content_description">Door 2</string>
    <string name="door_3_content_description">Door 3</string>
    <string name="initial_stats">0/0</string>
</resources>