<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/choicebuttonlayout"
        android:layout_width="409dp"
        android:layout_height="306dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/statusText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/choice1button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/question_mark" />

        <Button
            android:id="@+id/choice2button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/question_mark" />

        <Button
            android:id="@+id/choice3button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/question_mark" />

    </LinearLayout>

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_status_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choicebuttonlayout"
        app:layout_constraintBottom_toTopOf="@id/new_game_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_again_button_text"
        app:layout_constraintBottom_toTopOf="@+id/reset_stats_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusText" />

    <Button
        android:id="@+id/reset_stats_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_stats_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/statistics_text"
        app:layout_constraintTop_toBottomOf="@+id/new_game_button"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/statistics_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_statistics_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_stats_button" />


</androidx.constraintlayout.widget.ConstraintLayout>